crates/crochet_parser/src/snapshots/crochet_parser__tests__async_await-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let foo = async () => { await 10 };\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..35,
                pattern: Ident(
                    BindingIdent {
                        span: 4..7,
                        id: Ident {
                            span: 4..7,
                            name: "foo",
                        },
                    },
                ),
                type_ann: None,
                init: Some(
                    Expr {
                        span: 10..34,
                        kind: Lambda(
                            Lambda {
                                params: [],
                                body: Expr {
                                    span: 24..32,
                                    kind: Await(
                                        Await {
                                            expr: Expr {
                                                span: 30..32,
                                                kind: Lit(
                                                    Num(
                                                        Num {
                                                            span: 30..32,
                                                            value: "10",
                                                        },
                                                    ),
                                                ),
                                            },
                                        },
                                    ),
                                },
                                is_async: true,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                    },
                ),
                declare: false,
            },
        ],
    },
)
