crates/crochet_parser/src/snapshots/crochet_parser__tests__async_await-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let foo = async () => await a + await b\")"
---
Program {
    body: [
        VarDecl {
            span: 0..39,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "foo",
                    },
                },
            ),
            type_ann: None,
            init: Some(
                Lambda(
                    Lambda {
                        span: 10..39,
                        params: [],
                        body: Op(
                            Op {
                                span: 22..39,
                                op: Add,
                                left: Await(
                                    Await {
                                        span: 22..30,
                                        expr: Ident(
                                            Ident {
                                                span: 28..29,
                                                name: "a",
                                            },
                                        ),
                                    },
                                ),
                                right: Await(
                                    Await {
                                        span: 32..39,
                                        expr: Ident(
                                            Ident {
                                                span: 38..39,
                                                name: "b",
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        is_async: true,
                        return_type: None,
                        type_params: None,
                    },
                ),
            ),
            declare: false,
        },
    ],
}
