crates/crochet_parser/src/snapshots/crochet_parser__tests__blocks-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"do {let sum = do {let x = 5; let y = 10; x + y}; sum};\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..54,
                expr: Let(
                    Let {
                        span: 4..48,
                        pattern: Some(
                            Ident(
                                BindingIdent {
                                    span: 8..11,
                                    id: Ident {
                                        span: 8..11,
                                        name: "sum",
                                    },
                                },
                            ),
                        ),
                        type_ann: None,
                        init: Let(
                            Let {
                                span: 18..28,
                                pattern: Some(
                                    Ident(
                                        BindingIdent {
                                            span: 22..23,
                                            id: Ident {
                                                span: 22..23,
                                                name: "x",
                                            },
                                        },
                                    ),
                                ),
                                type_ann: None,
                                init: Lit(
                                    Num(
                                        Num {
                                            span: 26..27,
                                            value: "5",
                                        },
                                    ),
                                ),
                                body: Let(
                                    Let {
                                        span: 29..40,
                                        pattern: Some(
                                            Ident(
                                                BindingIdent {
                                                    span: 33..34,
                                                    id: Ident {
                                                        span: 33..34,
                                                        name: "y",
                                                    },
                                                },
                                            ),
                                        ),
                                        type_ann: None,
                                        init: Lit(
                                            Num(
                                                Num {
                                                    span: 37..39,
                                                    value: "10",
                                                },
                                            ),
                                        ),
                                        body: BinaryExpr(
                                            BinaryExpr {
                                                span: 41..46,
                                                op: Add,
                                                left: Ident(
                                                    Ident {
                                                        span: 41..42,
                                                        name: "x",
                                                    },
                                                ),
                                                right: Ident(
                                                    Ident {
                                                        span: 45..46,
                                                        name: "y",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            },
                        ),
                        body: Ident(
                            Ident {
                                span: 49..52,
                                name: "sum",
                            },
                        ),
                    },
                ),
            },
        ],
    },
)
